example/secondfile/objects/NDA_MRA_history_tracking__c.object
<CustomObject>
    <fields>
        <fullName>Document_Countersigner__c</fullName>
        <label>Document Countersigner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Sent_Date__c</fullName>
        <label>Document Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_initiated_by__c</fullName>
        <label>Document initiated by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_sent_to__c</fullName>
        <label>Document sent to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>NDA/MRA history trackings</relationshipLabel>
        <relationshipName>NDA_MRA_history_trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template_Title__c</fullName>
        <label>Template Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Type__c</fullName>
        <label>Template Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>MRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NDA/MRA history tracking</label>
    <nameField>
        <displayFormat>ES-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDA/MRA history trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>